k8s101handson/aspnetdemo_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet-demo
  labels:
    app: aspnet-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      service: aspnet-demo
  template:
    metadata:
      labels:
        app: aspnet-demo
        service: aspnet-demo
    spec:
      containers:
        - name: aspnet-demo
          image: pnk8s101/aspnet-demo
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
