k8s101handson/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-demo
  labels:
    app: pod-demo
spec:
  containers:
    - name: pod-demo
      image: pnk8s101/aspnet-demo
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
          protocol: TCP
