k8s101handson/aspnetdemo_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aspnet-demo
  labels:
    app: aspnet-demo
    service: aspnet-demo
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    service: aspnet-demo
