k8s101handson/aspnetdemo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aspnet-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
             name: aspnet-demo
             port:
              number: 80
